--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
   <footer class=" bg-light">
     <h4 class="text-center pt-3">ADDRESS</h4>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand bg-light">
       <div class="container-fluid">
 
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
